--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#EMAIL
+mailServer.host=smtp.gmail.com
+mailServer.port=587
+mailServer.email=XXXX
+mailServer.password=XXX
+mailServer.isSSL=false
